# discord-rpc-office97

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
office97/: CMakeLists.txt  excel.c  exports.def  richpresence.c  richpresence.h  shared.c  word.c
src/: CMakeLists.txt
